# lib_rlib_netdiag

./: .gitignore  README.md
example/: build.gradle  settings.gradle
example/android/: .gitignore  settings.gradle
example/android/app/src/main/res/values/: strings.xml  themes.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/app/: build.gradle
example/app/src/androidTest/java/com/bbclient/example_rustlib/: ExampleInstrumentedTest.java
example/app/src/main/: AndroidManifest.xml
example/app/src/main/java/com/bbclient/example_rustlib/: IRNetCallback.java  MainActivity.java  RNetDiagnostics.java
example/app/src/main/res/layout/: activity_main.xml
example/ios/netdiag-oc/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m  net_diagnosis.h
example/ios/netdiag-oc/lib_netdiagnosis.framework/: Info.plist
example/ios/netdiag-oc/lib_netdiagnosis.framework/Headers/: net_diagnosis.h
example/ios/netdiag.xcodeproj/: project.pbxproj
example/ios/netdiag.xcodeproj/xcuserdata/homework.xcuserdatad/xcschemes/: xcschememanagement.plist
example/lib_na_rnetdiag/: build.gradle
example/lib_na_rnetdiag/src/main/java/com/bbclient/rlib/: NetDiagnostics.java
lib_tracer_netdiagnostics/: .gitignore  Cargo.toml  README.md  example-on-android.py  gen_examplelib.py  gen_examplelib_and.py  gen_examplelib_ios.py
lib_tracer_netdiagnostics/crate/netdiag/: Cargo.toml
lib_tracer_netdiagnostics/crate/netdiag/src/: bind.rs  lib.rs
lib_tracer_netdiagnostics/crate/netdiag/src/trace/: icmp.rs  sock4.rs  trace.rs
lib_tracer_netdiagnostics/examples/: core.rs  import.rs  ip_dns.rs  ping.rs
lib_tracer_netdiagnostics/examples/core/: Cargo.toml
lib_tracer_netdiagnostics/examples/core/src/: main.rs
lib_tracer_netdiagnostics/src/: android_api.rs  config.rs  ios_api.rs  lib.rs
proj_example/app/: build.gradle
proj_example/app/src/main/: AndroidManifest.xml
proj_example/app/src/main/java/com/bbclient/example_rustlib/: IRNetCallback.java  MainActivity.java  RNetDiagnostics.java
proj_example/app/src/main/res/menu/: menu_main.xml
proj_example/app/src/main/res/values/: themes.xml
proj_example/app/src/main/res/values-night/: themes.xml
proj_example/gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
