[package]
name = "lib_tracer_netdiagnostics"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["bbclient"]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surge-ping = "0.8.0"
trust-dns-client = "0.23.0"
tokio = { version = "1.21.2", features = ["full"] }
thiserror = "1"
rand = "0.8.5"
futures = "0.3.25"
log = "0.4.17"  # log 
env_logger = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
jni = { version = "0.21", default-features = false }
jni-sys = "0.3.0"


[profile.release]
lto = true
strip = true 
opt-level = 'z'
codegen-units = 1
